Added basic authentication for service methods